[package]
name = "rust-gron"
description = """
    Gron transforms JSON into discrete assignments to make it easier to grep
"""
license = "MIT"
readme = "README.rst"
keywords = ["gron", "json"]
homepage = "http://github.com/tailhook/rust-gron"
documentation = "http://tailhook.github.com/rust-gron/"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
rustc-serialize = "0.3.19"
serde_json = "0.8.2"

[features]
log_errors = []

[lib]
name = "gron"
path = "src/lib.rs"

